# project

./: .coveragerc  .env  .flaskenv  .gitignore  .pylintrc  .travis.yml  LICENSE  README.md  main.py  pytest.ini  setup.cfg  setup.py
app/: .coveragerc  __init__.py  app.py  config.py  setup.py
app/migrations/versions/: 3e2e498156f0_base_user_model.py
app/models/: user.py
app/tests/: test_create_app.py  test_user_model.py
documentation/: specification.md
documentation/mockups/: admin.html  admin_mockup.html  cabinet_mockup.html  login.html  login_mockup.html  register.html  register_mockup.html
documentation/static/css/: style.css
module/: .coveragerc  .pylintrc  __init__.py  app.py  makepath.py  manage.py  run.py  setup.py
module/client/static/css/: style.css
module/client/templates/: base.html  jinja_helpers.html
module/client/templates/admin/: admin.html
module/client/templates/auth/: login.html  register.html
module/client/templates/cabinet/: cabinet.html
module/commands/: common.py
module/server/: .env  __init__.py  config.py
module/server/api/resources/: __init__.py  admin.py  user.py
module/server/api/schemas/: admin.py  (+2 more)
module/server/models/: __init__.py  jwt_tokens.py  payment_cards.py  user.py
module/server/static/: .env  messages.json  pkg_info.json
module/tests/: __init__.py  test_app.py  test_create_app.py
module/tests/models/: test_jwt_tokens_model.py  test_payment_cards_model.py  test_user_model.py
module/tests/views/: test_admin_view.py  test_cabinet_view.py  test_login_view.py
requirements/: dev.txt  prod.txt
(+18 files in other folders)
