[metadata]
name = Personal Account
version = attr: module.__version__
url = https://github.com/antkrit/project.git
platforms = 'win32', 'linux'
license = MIT License
python = "^3.6"
author = Krytskyi Anton
author_email = mujanjagusav@gmail.com
description = A simple web applications.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: Beta,
    Environment :: Web Environment,
    Intended Audience :: End Users/Desktop,
    License :: MIT License,
    Programming Language :: Python,
    Topic :: Provider :: Personal Account,
    Topic :: Internet/Provider,

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning:flask_moment.*

[coverage:run]
source = module/server
omit = *migrations*

[coverage:report]
fail_under = 80
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
ignore_errors = True

[MASTER]
load-plugins=pylint_flask_sqlalchemy
fail-under=9.0
ignore= tests, migrations, documentation, venv
ignore-patterns=requirements

[pylint.'MESSAGES CONTROL']
disable=
    wrong-import-position,
    too-few-public-methods,
    invalid-name,
    no-member,
    import-outside-toplevel

[pylint.FORMAT]
max-line-length = 120

[pylint.EXCEPTIONS]
overgeneral-exceptions=BaseException
